force-app/main/default/objects/Admission_Discharge__c/Admission_Discharge__c.object-meta.xml
<CustomObject>
    <label>Admission\Discharge</label>
    <nameField>
        <label>Admission\Discharge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admission\Discharges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>