force-app/main/default/objects/Admission_Discharge__c/fields/Census_Date__c.field-meta.xml
<CustomField>
    <fullName>Census_Date__c</fullName>
    <label>Census Date</label>
    <type>DateTime</type>
</CustomField>