force-app/main/default/objects/Admission_Discharge__c/fields/Discharged_Home__c.field-meta.xml
<CustomField>
    <fullName>Discharged_Home__c</fullName>
    <formula>IF(
    AND(
        TEXT(Type__c) = &quot;Discharge&quot;,
        OR(
            CONTAINS(LOWER(TRIM(To_From_Type__c)), &quot;home&quot;),
            CONTAINS(LOWER(TRIM(To_From_Type__c)), &quot;alf&quot;),
            CONTAINS(LOWER(TRIM(To_From_Type__c)), &quot;assisted&quot;)
        ),
        NOT(
            OR(
                CONTAINS(LOWER(TRIM(To_From_Type__c)), &quot;funeral&quot;),
                CONTAINS(LOWER(TRIM(To_From_Type__c)), &quot;nursing&quot;),
                CONTAINS(LOWER(TRIM(To_From_Type__c)), &quot;hospice&quot;)
            )
        )
    ),
    TRUE,
    FALSE
)</formula>
    <label>Discharged Home</label>
    <type>Checkbox</type>
</CustomField>