force-app/main/default/objects/Admission_Discharge__c/fields/Facility_Code_Resident_Id__c.field-meta.xml
<CustomField>
    <fullName>Facility_Code_Resident_Id__c</fullName>
    <formula>Patient__r.Facility_Code_Resident_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Code Resident Id</label>
    <type>Text</type>
</CustomField>