force-app/main/default/objects/Admission_Discharge__c/fields/Facility_State__c.field-meta.xml
<CustomField>
    <fullName>Facility_State__c</fullName>
    <formula>Patient__r.Facility_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility State</label>
    <type>Text</type>
</CustomField>