force-app/main/default/objects/Admission_Discharge__c/fields/Had_TCM_Visit__c.field-meta.xml
<CustomField>
    <fullName>Had_TCM_Visit__c</fullName>
    <formula>Patient__r.Had_TCM_Visit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Had TCM Visit</label>
    <type>Checkbox</type>
</CustomField>