force-app/main/default/objects/Admission_Discharge__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Admission\Discharges</relationshipLabel>
    <relationshipName>Admission_Discharges</relationshipName>
    <type>Lookup</type>
</CustomField>