force-app/main/default/objects/Admission_Discharge__c/fields/To_From_Location__c.field-meta.xml
<CustomField>
    <fullName>To_From_Location__c</fullName>
    <label>To/From Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>