force-app/main/default/objects/Admission_Discharge__c/fields/To_From_Type__c.field-meta.xml
<CustomField>
    <fullName>To_From_Type__c</fullName>
    <label>To/From Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>