force-app/main/default/objects/Admission_Discharge__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Patient__c</columns>
    <columns>Discharged_Home__c</columns>
    <columns>NAME</columns>
    <columns>Reset__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>To_From_Type__c</columns>
    <columns>To_From_Location__c</columns>
    <columns>Type__c</columns>
    <columns>Parent_Company__c</columns>
    <columns>Census_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>